syntax = "proto3";

// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative ./cluster/proto/cluster.proto

option go_package = "github.com/odit-bit/scarlett/cluster/proto";

package clusterproto;

service Cluster {
    rpc GetNodeApiUrl(Request) returns (Response) {};
    rpc GetNodeRaftAddr(NodeRaftAddrRequest) returns (NodeRaftAddrResponse) {};
    rpc Join(JoinRequest) returns (JoinResponse) {};
}

message Request {
    string type = 1;
}

message Response {
    string Url = 1;
}

message NodeRaftAddrRequest{
}

message NodeRaftAddrResponse{
    string Addr = 1;
}

// service Node {
//     rpc Join(JoinRequest) returns (JoinResponse) {};
// }

message JoinRequest {
    string address = 1;
    string id = 2;
}

message JoinResponse {
    string msg = 1;
}
